
SVN
-------------------------------

XML:   Resolved issue CASTOR-1596 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Expanded JMethod.addException() to correctly insert @throws Javadoc.
       Details: http://jira.codehaus.org/browse/CASTOR-1596
       (Werner - 20060930)

XML:   Resolved issue CASTOR-1594 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Added regression test for CASTOR-1580 to CTF regression suite.
       Details: http://jira.codehaus.org/browse/CASTOR-1594
       (Werner - 20060930)

XML:   Resolved issue CASTOR-1589 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fixed ComplexType-DirectAccess test complaining about differences.
       Details: http://jira.codehaus.org/browse/CASTOR-1589
       (Ralf - 20060930)

XML:   Resolved issue CASTOR-1590 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Source code cleanup at Castor XML test framework.
       Details: http://jira.codehaus.org/browse/CASTOR-1590
       (Ralf - 20060929)

XML:   Resolved issue CASTOR-1588 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fixed problem with stack overflow in CTF maste test suite
       Details: http://jira.codehaus.org/browse/CASTOR-1588
       (Werner - 20060929)

XML:   Resolved issue CASTOR-1583 using contribution from Edward Kuns [edward.kuns@aspect.com]
       CTF doesn't run properly under Fedora Core Linux.
       Details: http://jira.codehaus.org/browse/CASTOR-1583
       (Ralf - 20060927)

XML:   Resolved issue CASTOR-1566 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with incorrect generation of unmarshal methods for extensions/restrictions 
       where extended/restricted type is in an imported schema.
       Details: http://jira.codehaus.org/browse/CASTOR-1566
       (Werner - 20060927)

XML:   Resolved issue CASTOR-1574 using contribution from Werner Guttmann [werner.guttmann@gmx.net]